markdown added to notebooks

--- a/notebooks/Energy_Density_Fields.ipynb
+++ b/notebooks/Energy_Density_Fields.ipynb
@@ -9,6 +9,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49b9e9e3",
+   "metadata": {},
+   "source": [
+    "#### Preamble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ead63a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import astropy.io.fits as pyf\n",
+    "from astropy.io import fits\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e415e48",
+   "metadata": {},
+   "source": [
+    "#### Load in data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e016c264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ρ = fits.open('dens_t800.fits')[0].data\n",
+    "vx = fits.open('velx_t800.fits')[0].data\n",
+    "vy = fits.open('vely_t800.fits')[0].data\n",
+    "vz = fits.open('velz_t800.fits')[0].data\n",
+    "Bx = fits.open('magx_t800.fits')[0].data\n",
+    "By = fits.open('magy_t800.fits')[0].data\n",
+    "Bz = fits.open('magz_t800.fits')[0].data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee0fc4e",
+   "metadata": {},
+   "source": [
+    "#### Compute energy fields (kinetic, magnetic, and total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9edd8c42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ρ = np.log(ρ)\n",
+    "\n",
+    "v_dot_v = (vx**2 + vy**2 + vz**2)\n",
+    "v_dot_v = np.log(v_dot_v)\n",
+    "\n",
+    "E_kinetic = ((ρ - np.mean(ρ)) / np.std(ρ)) * ((v_dot_v - np.mean(v_dot_v)) / np.std(v_dot_v))\n",
+    "\n",
+    "B_dot_B = (Bx**2 + By**2 + Bz**2)\n",
+    "B_dot_B = np.log(B_dot_B)\n",
+    "\n",
+    "E_B = (B_dot_B - np.mean(B_dot_B)) / np.std(B_dot_B)\n",
+    "\n",
+    "E_total = E_B + E_kinetic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29d0c57d",
+   "metadata": {},
+   "source": [
+    "#### Make plots of kinetic energy, magnetic energy, and total energy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "1e9aefc4",
@@ -48,36 +131,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import astropy.io.fits as pyf\n",
-    "from astropy.io import fits\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "#load data\n",
-    "ρ = fits.open('dens_t800.fits')[0].data\n",
-    "vx = fits.open('velx_t800.fits')[0].data\n",
-    "vy = fits.open('vely_t800.fits')[0].data\n",
-    "vz = fits.open('velz_t800.fits')[0].data\n",
-    "Bx = fits.open('magx_t800.fits')[0].data\n",
-    "By = fits.open('magy_t800.fits')[0].data\n",
-    "Bz = fits.open('magz_t800.fits')[0].data\n",
-    "\n",
-    "# compute E fields\n",
-    "ρ = np.log(ρ)\n",
-    "\n",
-    "v_dot_v = (vx**2 + vy**2 + vz**2)\n",
-    "v_dot_v = np.log(v_dot_v)\n",
-    "\n",
-    "E_kinetic = ((ρ - np.mean(ρ)) / np.std(ρ)) * ((v_dot_v - np.mean(v_dot_v)) / np.std(v_dot_v))\n",
-    "\n",
-    "B_dot_B = (Bx**2 + By**2 + Bz**2)\n",
-    "B_dot_B = np.log(B_dot_B)\n",
-    "\n",
-    "E_B = (B_dot_B - np.mean(B_dot_B)) / np.std(B_dot_B)\n",
-    "\n",
-    "E_total = E_B + E_kinetic\n",
-    "\n",
-    "#make plots\n",
     "plt.imshow(E_kinetic[:,:,0], cmap='Set3', vmin=-10, vmax=10)\n",
     "plt.colorbar()\n",
     "plt.title('Kinetic Energy')\n",
