--- a/notebooks/Full_and_disc_test_plots.ipynb
+++ b/notebooks/Full_and_disc_test_plots.ipynb
@@ -1,19 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "777153f7",
+   "metadata": {},
+   "source": [
+    "# Computing the full, disconnected, and connected plots of the 4PCF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7e9ad23",
+   "metadata": {},
+   "source": [
+    "#### Preamble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d6bc8d1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#preamble\n",
-    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import astropy.io.fits as pyf\n",
     "import os\n",
     "import sarabande"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "430f5f73",
+   "metadata": {},
+   "source": [
+    "#### Declare variables used in the computations"
    ]
   },
   {
@@ -33,14 +55,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff0022f7",
+   "metadata": {},
+   "source": [
+    "#### Name variables used in the computations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "786c38ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#variables \n",
-    "\n",
     "physical_boxsize = config[\"physical_boxsize\"] # Mpc / h\n",
     "Nmesh = config[\"Nmesh\"] \n",
     "ell_max = config[\"ell_max\"]\n",
@@ -51,16 +79,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0745c282",
+   "metadata": {},
+   "source": [
+    "#### Load in data of the full 4PCF and the disconnected 4PCF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "c2ecae3e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load in data\n",
-    "\n",
     "zetas_full = np.load(\"4pcf_full.npy\")\n",
     "zetas_disconnected = np.load(\"4pcf_disconnected.npy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "047dadbc",
+   "metadata": {},
+   "source": [
+    "#### Convert this data to 1D"
    ]
   },
   {
@@ -70,11 +112,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convert to 1D\n",
-    "\n",
     "r_arr = np.linspace(rmin,rmax,nbins+1)\n",
     "r_lo, r_hi = r_arr[:-1], r_arr[1:]\n",
     "r_av = 0.5*(r_lo+r_hi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5e8436e",
+   "metadata": {},
+   "source": [
+    "#### Plot the 1D data: generate the data and then plot the full and disconnected bits on the same graph for comparison"
    ]
   },
   {
@@ -84,8 +132,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1D plot data\n",
-    "\n",
     "def generate_1d_plot_data(ells, zeta, theory=False):\n",
     "    \"\"\"\n",
     "    Generate the 1D plot data.\n",
@@ -134,7 +180,6 @@
     }
    ],
    "source": [
-    "#Plot details\n",
     "ells_list = ['000', '110', '011', '101', '202',  '220', '022']\n",
     "# factor = (4 * np.pi)**(2)\n",
     "\n",
@@ -163,6 +208,14 @@
     "\n",
     "    axes[0].legend(ncol=3, edgecolor=\"black\", shadow=True)\n",
     "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ddc8f0",
+   "metadata": {},
+   "source": [
+    "#### Plot the connected 4PCF by subtracting the disconnected zetas from the full zetas"
    ]
   },
   {
